<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/test5"
    >

    
<ScrollView 
	android:layout_marginBottom="50dip" 
	android:id="@+id/ScrollView04" 
	android:layout_height="wrap_content" 
	android:layout_width="fill_parent" 
	android:isScrollContainer="true">

<LinearLayout 
	android:layout_height="fill_parent" 
	android:layout_width="fill_parent" 
	android:layout_weight="1" 
	android:orientation="vertical">

<Button
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_marginBottom="10dip"
        android:layout_marginTop="30dip"
        android:layout_marginRight="20dip"
        android:layout_gravity="right"
		android:id="@+id/vcard"
        android:padding="12dip"
        
        android:background="#AA000000"
        android:textColor="#ffffffff"
        
        android:text="@string/vcard" android:gravity="right"/>
<Button
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_marginBottom="10dip"
        android:layout_marginTop="20dip"
        android:layout_marginRight="20dip"
        android:layout_gravity="right"
		android:id="@+id/gcard"
        android:padding="12dip"
        
        android:background="#AA000000"
        android:textColor="#ffffffff"
        
        android:text="@string/gcard" android:gravity="right"/>
<Button
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_marginBottom="10dip"
        android:layout_marginTop="20dip"
        android:layout_marginRight="20dip"
        android:layout_gravity="right"
		android:id="@+id/wcard"
        android:padding="12dip"
        
        android:background="#AA000000"
        android:textColor="#ffffffff"
        
        android:text="@string/wcard" />
<Button
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_marginBottom="10dip"
        android:layout_marginTop="20dip"
        android:layout_marginRight="20dip"
        android:layout_gravity="right"
		android:id="@+id/ocard"
        android:padding="12dip"
        
        android:background="#AA000000"
        android:textColor="#ffffffff"
        
        android:text="@string/ocard" />

</LinearLayout>
</ScrollView>
<LinearLayout 
	android:orientation="horizontal" 
	android:layout_alignParentBottom="true" 
    android:layout_width="fill_parent" 
    android:layout_marginBottom="10dip"  
    android:layout_height="wrap_content" 
    android:gravity="center_vertical|center_horizontal">
 
 <Button
        android:layout_width="wrap_content" 
        android:layout_height="fill_parent" 
        android:layout_marginBottom="0dip"
        android:layout_marginTop="0dip"
        android:layout_marginRight="30dip"
        android:layout_gravity="left"
		android:id="@+id/help"
        android:padding="6dip"
        android:background="#AA000000"
        android:textColor="#ffffffff"
        android:text="@string/help" />
<Button
        android:layout_width="wrap_content" 
        android:layout_height="fill_parent" 
        android:layout_marginBottom="0dip"
        android:layout_marginTop="0dip"
        android:layout_marginLeft="30dip"
        android:layout_gravity="right"
		android:id="@+id/exit"
        android:padding="6dip"
        android:background="#AA000000"
        android:textColor="#ffffffff"
        android:text="@string/exit"/>
 
</LinearLayout>
</RelativeLayout>
